- Correction z-index des agrafes ; - Correction affichage du dégradé de tranche agrafée ; - Adaptation des fonctions Remplir et Rectangle à la mise en place des previews vides ; - Ne pas recharger la preview d'une étape quand on quitte la modif de cette étape sans sauvegarder les changements

--- a/EdgeCreator/css/edgecreator_wizard.css
+++ b/EdgeCreator/css/edgecreator_wizard.css
@@ -102,6 +102,7 @@ button#connexion, button#deconnexion {
 	cursor: move;
 	background-color:transparent;
 	opacity: 1;
+	z-index: 1001;
 }
 
 .wizard.preview_etape .agrafe {
